Changelog
=========

2020.2.2 (unreleased)
---------------------

- Bump ftw.solr version to 2.8.4 to get update of modified index. [njohner]
- Add @listing-stats API endpoint to get statistical data from folderish content. [elioschmutz]
- Fix public documentation build. [elioschmutz]
- Fix solr complex search pattern configuration. [deiferni]


2020.2.1 (2020-03-27)
---------------------

- Bump ftw.solr version to 2.8.2 to get fix for millisecond rounding error. [njohner]
- Backdate AddHiddenFlagToAdminAndOrgUnit upgrade step. [njohner]


2020.2.0 (2020-03-24)
---------------------

- Prevent attempts to edit exclusively checked out documents in Office Online. [lgraf]
- Do not allow to choose inbox of hidden OrgUnit as responsible in forwardings. [njohner]
- Change container title format in task activities. [njohner]
- Disable OfficeOnline action on docs in resolved or inactive dossiers. [lgraf]
- Add hidden flag to OrgUnits and AdminUnits. [njohner]
- Disallow choosing hidden orgunits as responsible_client in tasks and forwardings. [njohner]
- Do not display hidden orgunits in orgunit selector. [njohner]
- Disable regular checkout and edit actions for documents currently being edited in Office Online. [lgraf]
- Add 'Edit in Office Online' file action button in classic UI. [lgraf]
- OfficeOnline: Show specific message for collaborative checkouts. [lgraf]
- Document GET API: Also include info about collaborative checkouts. [lgraf]
- Also return @id in globalindex endpoint. [njohner]
- Extend the document serialization with `checked_out_fullname`. [elioschmutz]
- Add a new profile to setup a cas auth plugin for the ianus portal. [elioschmutz]
- Return actual data in TeamGet and UserGet. [njohner]
- Fix encoding issue in query-source `query` parameter. [deiferni]
- Do no longer send activity mails from the current user due to spam issues when the user's email address does not match the portal domain. [elioschmutz]